[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wolai-mcp"
version = "1.1.0"
description = "MCP Server for Wolai — Connect AI agents to your Wolai knowledge base"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "wolai", "ai", "knowledge-base", "notes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp[cli]>=1.0.0", "requests>=2.28.0"]

[project.urls]
Homepage = "https://github.com/LittlePeter52012/wolai-mcp"
Issues = "https://github.com/LittlePeter52012/wolai-mcp/issues"

[project.scripts]
wolai-mcp = "wolai_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wolai_mcp"]
